--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 11-30-04: Removed madscreenshot (my bad). [Tsusai]
- 11-30-04: Weiss.ini auto-update now depends on the release version. [Tsusai]
- 11-28-04: Fixed UPnP & WAC errors as reported in R. [AlexKreuz]
- 11-27-04: Non existant character in ActiveChars caused crash. [AlexKreuz]
- 11-26-04: Auto-updating of weiss.ini. [AlexKreuz]
- 11-26-04: Undefined map caused crash for Doubel Strafe (PSS). [AlexKreuz]
- 11-26-04: Fixed PVP Disconnect calculation problems. [AlexKreuz]
- 11-26-04: Re-enabled PVP. Minor cleanup. [AlexKreuz]
- 11-26-04: Cleaned up JCon Characters tab. [AlexKreuz]
- 11-22-04: Added reseteventmob. [Tsusai]
- 11-22-04: Removed an unused unit 'jpeg'. [Tsusai]
- 11-18-04: Added a universal warp procedure. [Tsusai]
- 11-18-04: Added a possible universal broadcast procedure. [Tsusai]
- 11-17-04: Fixed areabroadcast's area component. [Tsusai]
- 11-16-04: Added some error processing for UPnP. [Tsusai]
- 11-14-04: Fixed Bug with PSS, map was not defined.  [Darkhelmet]
- 11-14-04: Fixed Bug with Double/Triple Attack.  [Darkhelmet]
- 11-10-04: Added some documentation for pets in Game.pas.  [Darkhelmet]
- 11-09-04: Corrected npctimer mistake. [Tsusai]
- 11-08-04: Added waitingroomcount NPC command. [Tsusai]
- 11-08-04: Updated areawarp and areabroadcast. [Tsusai]
- 11-08-04: Changed JCon's Skill hiding function.  Hides skills not learned yet. [Tsusai]
- 11-08-04: Allowed donpcevent to go ahead and trigger specified script. [Tsusai]
- 11-07-04: REED: Reduced startup lag on large REED databases. [AlexKreuz]
- 11-07-04: REED: Ban & Diplomacy lists caused crash on reload. [AlexKreuz]
- 11-07-04: UPnP: Fixed crash when no network detected. [AlexKreuz]
- 11-06-04: UPnP: Automatic Port Forwarding Implemented. [AlexKreuz]
- 11-06-04: ISCS send option updated. [AlexKreuz]